
Changelog
=========

2018.5.0 (unreleased)
---------------------

- Add trashing of protocol excerpts. [njohner]
- Display title for NullObject in meeting template selection. [njohner]
- Fix styling of favorite button. [njohner]
- Exclude searchroots from subdossier listings. [Rotonen, lgraf]
- Add filters (active and all) to membership listing. [njohner]
- Do not add a task-reminder activity if task is finished. [elioschmutz]
- Add restapi endpoints to add and delete task-reminders. [elioschmutz]
- Remove leftover checkout and edit, and cancel actions for sablon and proposal templates. [njohner]
- Do not include paragraphs in comittee table of contents. [njohner]
- Add TaskReminder to handle reminders in annotations and sql. [elioschmutz]
- Allow users to retry creating a file from a Oneoffixx template. [Rotonen]
- Add TaskReminderActivity object. [elioschmutz]
- Make paragraph templates deletable. [Rotonen]
- Add ReminderSetting SQL Model. [elioschmutz]
- Add task-reminder activity settings. [elioschmutz]
- Preserve proposal document title for proposal documents of submitted proposals. [Rotonen]
- Support adding tasks via REST API. [phgross]
- Reindex issuer of all proposals. [phgross]
- Correct info messages in meetings. [njohner]
- Add proposal tabs to repository folders. [Rotonen]
- Fix global scoped "show more" links for SOLR livesearch [Rotonen]
- Only set proposal to decided when excerpt has been generated and returned. [njohner]
- Add actions pointing to the meeting and protocol debug views. [njohner]
- Fix bug with document without file in a dossiertemplate. [njohner]
- Prevent replacing files on proposal templates with non-.docx files via quickupload. [Rotonen]
- Add an upgrade step to fix broken-by-broken-protocol-excerpt journal entries on dossiers. [Rotonen]
- Do not list documents within dossiertemplates when creating a document from template. [njohner]
- Correct width of subdossier table in dossier details pdf. [njohner]